# whisper-django

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  TODO.md  init.sh  publish_image.sh  pyproject.toml  requirements-whisper.txt  uwsgi.ini
generate_transcript_app/: manage.py
generate_transcript_app/generate_transcript_app/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
generate_transcript_app/media/captions/: Daniela.vtt
generate_transcript_app/transcriber/: cron.py  forms.py  models.py  tasks.py  urls.py  views.py
generate_transcript_app/transcriber/migrations/: 0001_initial.py  0002_mediafile_deleted.py  0003_rename_transcription_mediafile_vtt_transcription_and_more.py  0004_mediafile_json_save.py
generate_transcript_app/transcriber/static/js/: detail.js
generate_transcript_app/transcriber/templates/transcriber/: detail.html  index.html
